# gr-ale

./: .gitignore  CMakeLists.txt  MANIFEST.md  README.md  modem_engine_diagram.dot
apps/: CMakeLists.txt
cmake/Modules/: gnuradio-aleConfig.cmake
docs/doxygen/: CMakeLists.txt  Doxyfile.in
docs/doxygen/doxyxml/: __init__.py  base.py  doxyindex.py  text.py
docs/doxygen/other/: group_defs.dox
examples/: aleDocderPlayground.grc  aledecoderplayground.py  multi_ale.py
grc/: CMakeLists.txt  ale_decode_ff.block.yml  ale_encode_ff.block.yml  modem.block.yml
include/ale/: decode_ff.h
include/gnuradio/ale/: CMakeLists.txt  api.h  decode_ff.h  modem.h
lib/: CMakeLists.txt  decode_ff_impl.cc  decode_ff_impl.h  encode_ff_impl.cc  encode_ff_impl.h  modem.cpp  modem.hpp  modem_impl.cpp  modem_impl.hpp
python/: __init__.py
python/ale/: CMakeLists.txt  __init__.py  qa_decode_ff.py
python/ale/bindings/: CMakeLists.txt  decode_ff_python.cc  decode_ff_python.h  python_bindings.cc
python/ale/bindings/docstrings/: decode_ff_pydoc_template.h
swig/: CMakeLists.txt  ale_swig.i
tests/unit_tests/: CMakeLists.txt  test_modem.cpp
